apps/cilium/gateway-jdmarble-net.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: cilium
  name: jdmarble-net
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-dns
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.jdmarble.net"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: jdmarble-net-tls
